# zxing-android

./: .gitignore  CMakeLists.txt  build.gradle  gradle.properties
src/main/: AndroidManifest.xml
src/main/jni/zxing/: MatSource.cpp
src/main/jni/zxing/aztec/: AztecDetectorResult.cpp
src/main/jni/zxing/common/: DetectorResult.cpp
src/main/jni/zxing/datamatrix/detector/: DetectorException.cpp
src/main/jni/zxing/oned/: Code39Reader.cpp  Code93Reader.cpp  EAN13Reader.cpp  EAN8Reader.cpp  OneDResultPoint.cpp  UPCAReader.cpp
